# trendlines

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  add_data.sh  docker-build.yml  pyproject.toml  requirements-dev.txt  requirements.txt  runserver.py  runworker.py  setup.cfg  setup.py
.github/workflows/: ci.yml
apache/: trendlines.conf  wsgi.py
docker/: Dockerfile  docker-compose.yml  trendlines.cfg
docs/: Makefile  api.rst  conf.py  development.rst  index.rst  installation.rst  upgrading.rst  usage.rst
docs/modules/: modules.rst  trendlines.app_factory.rst  trendlines.celery_factory.rst  trendlines.db.rst  trendlines.default_config.rst  trendlines.error_responses.rst  trendlines.orm.rst  trendlines.routes.rst  trendlines.rst  trendlines.utils.rst
migrations/: 0001_create_table_metric.py  0002_create_table_datapoint.py  0003_add_spec_limits.py  0004_unique_constraint_metric_name.py  0005_on_delete_cascade_metric.py  0006_make_primary_keys_autoincrement.py
src/trendlines/: __about__.py  __init__.py  _logging.py  app_factory.py  celery_app.py  celery_factory.py  db.py  default_config.py  error_responses.py  orm.py  routes.py  utils.py
src/trendlines/static/: core.js  metric.schema.json
src/trendlines/templates/trendlines/: index.html  layout.html  plot.html
tests/: Dockerfile  conftest.py  docker-compose.yml  test_app_factory.py  test_db.py  test_error_responses.py  test_integration.py  test_orm.py  test_regression.py  test_routes.py  test_utils.py
tests/integration/: apache.conf  trendlines.cfg
