[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Trendlines"
version = "0.6.0b2"
description = "Lightweight time-series recording."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Douglas Thor"},  # so that package core metadata "Author" field gets populated.
    {name = "Douglas Thor", email = "doug.thor@gmail.com"},
]
maintainers = []
keywords = []
classifiers = []
dependencies = [
    "flask>=2.0,<3.0",
    "peewee>=3.8,<3.9",
    "marshmallow>=2.19,<3.0",
    "apispec>=2,<3",
]

[project.optional-dependencies]
dev = [
  "Pygments==2.14.0",
  "alabaster==0.7.13",
  "attrs==22.2.0",
  "babel==2.11.0",
  "certifi==2022.12.7",
  "cfgv==3.3.1",
  "charset-normalizer==3.0.1",
  "coverage==7.1.0",
  "distlib==0.3.6",
  "docker==6.0.1",
  "docutils==0.19",
  "exceptiongroup==1.1.0",
  "filelock==3.9.0",
  "freezegun==1.2.2",
  "identify==2.5.18",
  "idna==3.4",
  "imagesize==1.4.1",
  "iniconfig==2.0.0",
  "nodeenv==1.7.0",
  "packaging==23.0",
  "platformdirs==3.0.0",
  "pluggy==1.0.0",
  "pre-commit==3.0.4",
  "pytest==7.2.1",
  "pytest-cov==4.0.0",
  "pytest-docker==1.0.1",
  "python-dateutil==2.8.2",
  "pytz==2022.7.1",
  "pyyaml==6.0",
  "requests==2.28.2",
  "six==1.16.0",
  "snowballstemmer==2.2.0",
  "sphinx==6.1.3",
  "sphinxcontrib-applehelp==1.0.4",
  "sphinxcontrib-devhelp==1.0.2",
  "sphinxcontrib-htmlhelp==2.0.1",
  "sphinxcontrib-jsmath==1.0.1",
  "sphinxcontrib-qthelp==1.0.3",
  "sphinxcontrib-serializinghtml==1.1.5",
  "tomli==2.0.1",
  "urllib3==1.26.14",
  "virtualenv==20.19.0",
  "websocket-client==1.5.1",
]

[project.urls]
"Source Code" = "https://github.com/dougthor42/trendlines"
"Changelog" = "https://github.com/dougthor42/trendlines/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/dougthor42/trendlines/issues"
